# axum-webserver-template

./: .env.example  .gitignore  Cargo.toml  docker-compose.example.yaml
src/: app_state.rs  errors.rs  init.rs  main.rs  shared.rs
src/errors/: dto_error.rs  impl_error_response.rs
src/modules/health/: mod.rs
src/modules/health/routes/: health_check.rs
