[package]
name = "axum-webserver-template"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "ipnetwork"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
thiserror = "2.0.17"
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
axum = { version = "0.8.7", features = ["macros", "tokio"] }
chrono = { version = "0.4.37", features = ["serde"] }
url = "2.5.0"
memcached = "0.4.4"
tower-http = { version = "0.6.8", features = ["cors"] }
tower = { version = "0.5.2", features = ["limit", "buffer"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
